# Pokemon-Terminal

./: README.md  pyproject.toml
pokemonterminal/: command_flags.py
src/pokemonterminal/: database.py  main.py  scripter.py
src/pokemonterminal/Data/: pokemon.txt
src/pokemonterminal/terminal/adapters/: iterm.py
